# Building-Connecting_librariesHW11

ClassHieDllLibHW11.4/: ClassHieDllLibHW11.4.sln  ClassHieDllLibHW11.4.vcxproj  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.h  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.h  RectangleF.h  Rhomb.h  RightTriangle.cpp  RightTriangle.h  Square.h  Triangle.cpp  Triangle.h
ClassHierarchyCmakeHW11.5/: CMakeLists.txt  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  RectangleF.cpp  RectangleF.h  Rhomb.cpp  Rhomb.h  RightTriangle.h  Square.cpp  Square.h  Triangle.h  classHierarchyCMakeHW11.5main.cpp
DinamicLibCMakeHW11.3/: CMakeLists.txt  Leaver.h  dynamicLibCMakeHW11.3main.cpp
DinamicLibHW11.2/: DinamicLibHW11.2.sln  DinamicLibHW11.2.vcxproj  Leaver.cpp  Leaver.h
StaticLibHW11.1/: Greeter.cpp  Greeter.h  StaticLibHW11.1.sln  StaticLibHW11.1.vcxproj
classHieDllHW11.4main/: classHieDllHW11.4main.vcxproj
dynamicLibHW11.2main/: dynamicLibHW11.2main.vcxproj
staticLibHW11.1main/: staticLibHW11.1main.cpp  staticLibHW11.1main.sln  staticLibHW11.1main.vcxproj
